--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="row g-0" style="background-color: #A24857;">
 		<div class="col-md-2 text-left text-md-center" style="display: flex; justify-content: center; align-items: center;">
-			<img src="harry.jpg" alt="Profile Photo" width="100" height="175" />
+			<img src="Images/harry.jpg" alt="Profile Photo" width="100" height="175" />
 		</div>
 		<div class="col-md-10 col-lg-10">
 			<div class="d-flex flex-column">
